# NetTra---Network-traffic-Analyzer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  config.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pcap_capture.rs
src/components/: index.ts
src/components/analysis/: TrafficAnalysis.tsx
src/components/dashboard/: BandwidthChart.tsx  Dashboard.tsx  MetricsCard.tsx  ProtocolPieChart.tsx  TopIPsTable.tsx  index.ts
src/components/generator/: TrafficGenerator.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/monitor/: LiveMonitor.tsx
src/components/settings/: Settings.tsx
src/components/threat/: ThreatIntel.tsx
src/context/: ThemeContext.tsx
src/hooks/: useTrafficData.tsx
