[package]
name = "nettra"
version = "1.0.0"
description = "Network Traffic Analyzer Desktop Application"
authors = ["NetTra"]
edition = "2021"

[lib]
name = "nettra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation"] }

[profile.release]
strip = true
